--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     </p>
                 
-                    <a href="https://drive.google.com/file/d/1FLqi0qjK33LtLRRua-ef58v6D6iqPwko/view?usp=sharing" target="_blank">View CV</a>
+                    <a href="https://drive.google.com/file/d/1__2sVjc7xLOM_EodwRhVmzdfXrHfKrlP/view" target="_blank">View CV</a>
 
                 </div>
             </div>
