--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                     </p>
                 
-                    <a href="https://drive.google.com/file/d/19TmtR9gGrATlG5DdAwjFOJR3Vm2h9zlv/view" target="_blank">View CV</a>
+                    <a href="https://nikhilrana2076.github.io/cv/cv.pdf" target="_blank">View CV</a>
 
                 </div>
             </div>
