--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
-
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 <body>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
@@ -198,7 +198,8 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Nikhil Rana</div>
+                                <div class="sub-title"><div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="dark" data-type="HORIZONTAL" data-vanity="nikhilrana2076" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://np.linkedin.com/in/nikhilrana2076?trk=profile-badge">Nikhil Rana</a></div>
+              </div>
                             </div>
                         </div>
                         <div class="row">
@@ -213,6 +214,7 @@
                             <div class="info">
                                 <div class="head">Email</div>
                                 <div class="sub-title">nikhilrana2076@gmail.com</div>
+
                             </div>
                             
                         </div>
